fixed: titlebar breadcrumb not showing separators correctly when on home page

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,43 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-.loader {
-  width: 15px;
-  aspect-ratio: 1;
-  border-radius: 50%;
-  animation: l5 1s infinite linear alternate;
-}
-@keyframes l5 {
-  0% {
-    box-shadow:
-      20px 0 #000,
-      -20px 0 #0002;
-    background: #000;
-  }
-  33% {
-    box-shadow:
-      20px 0 #000,
-      -20px 0 #0002;
-    background: #0002;
-  }
-  66% {
-    box-shadow:
-      20px 0 #0002,
-      -20px 0 #000;
-    background: #0002;
-  }
-  100% {
-    box-shadow:
-      20px 0 #0002,
-      -20px 0 #000;
-    background: #000;
-  }
-}
-
-* {
-  transition: background-color 200ms ease-in;
-}
-
 html,
 body {
   background-color: var(--color-surface-dim);
